--- a/CustomTranslatorCLI/CustomTranslatorCLI.csproj
+++ b/CustomTranslatorCLI/CustomTranslatorCLI.csproj
@@ -6,9 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appSettings.sample.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appSettings.sample.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.17.0" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.21" />
+    <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
 </Project>
