azure key vault persistence

--- a/CustomTranslatorCLI/appSettings.sample.json
+++ b/CustomTranslatorCLI/appSettings.sample.json
@@ -1,4 +1,6 @@
 ﻿{
-  "clientId": "***Application (client) ID***",
-  "tenantId": "****Tenant ID***"
+  "TRANSLATOR_VAULT_URI": "https://your-keyvault-hostname.vault.azure.net/",
+  "AZURE_CLIENT_ID": "*****azure-client-id*****",
+  "AZURE_TENANT_ID": "*****azure-tenant-id*****",
+  "AZURE_CLIENT_SECRET": "*****azure-client-secret*****"
 }
